--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My First Github Repo</title>
 </head>
 <body>
+    <h1>This is my heading number 1</h1>
+    <h2>This is another heading number 2</h2>
+    <p>The quick fox jumps over the lazy dog.This is really paragraph that I type here.</p>
     
 </body>
 </html>
