--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>This is my heading number 1</h1>
     <h2>This is another heading number 2</h2>
     <p>The quick fox jumps over the lazy dog.This is really paragraph that I type here.</p>
+    <img style= "width:100%;" src="baby.jpg">
     
 </body>
 </html>
