--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>This is another heading number 2</h2>
     <p>The quick fox jumps over the lazy dog.This is really paragraph that I type here.</p>
     <img style= "width:100%;" src="baby.jpg">
+    <img src="sea.jpeg">
     
 </body>
 </html>
