--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <h1>This is my heading number 1</h1>
     <h2>This is another heading number 2</h2>
+    <div>
+    <h3>This is h3 means heading three</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque molestiae est a quidem cupiditate voluptate voluptatum recusandae sed saepe animi nobis laudantium veritatis aliquam reprehenderit incidunt, molestias non exercitationem ipsum omnis tempore cumque earum ipsa blanditiis voluptates? Hic, eos, assumenda nulla ea deserunt dolores ad excepturi est, beatae iusto ex!</p>
     <p>The quick fox jumps over the lazy dog.This is really paragraph that I type here.</p>
+</div>
     <img style= "width:100%;" src="baby.jpg">
     <img src="sea.jpeg">
     
